expose client details